sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {
  var n:Int=getNombreValeurs()
  for ( k <- 1 to (n-1)){
    stock:Int=getValeur(i)
    for (l <- (i-1) to 0 by -1){
      compa:Int=getValeur(l)
      if (compa > stock){
        setValeur((l+1),compa)
      }else {
        setValeur((l+1),stock)
        l=0
      }
    }
  }
}